--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-releases": "^2.0.13",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-virtualized": "^9.22.5",
     "react-virtualized-auto-sizer": "^1.0.20",
