--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "npx eslint ./**/*.jsx --fix"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^14.1.0",
     "autoprefixer": "10.4.15",
-    "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "node-releases": "^2.0.13",
@@ -22,5 +22,11 @@
     "react-virtualized-auto-sizer": "^1.0.20",
     "string-similarity": "^4.0.4",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.4"
   }
 }
