Add easy json editor. make tabs more reactive. add more tab state management. add json editor package. make saving save extra filter settings. remove visible scrollbar. change default tab. add some constants

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-virtualized": "^9.22.5",
     "react-virtualized-auto-sizer": "^1.0.20",
+    "react18-json-view": "^0.2.7",
     "string-similarity": "^4.0.4",
     "tailwindcss": "3.3.3"
   },
