--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/eslint-plugin-next": "^14.1.0",
     "autoprefixer": "10.4.15",
+    "es-shim-unscopables": "^1.0.2",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "node-releases": "^2.0.13",
