--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "npx eslint ./**/*.jsx --fix"
+    "lint": "next lint --fix",
+    "generate": "node .github/workflows/generateRepoFiles.mjs"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^14.1.0",
     "autoprefixer": "10.4.15",
     "es-shim-unscopables": "^1.0.2",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "node-releases": "^2.0.13",
-    "postcss": "8.4.30",
+    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
@@ -26,9 +26,17 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.4"
+    "@octokit/auth-unauthenticated": "^6.1.0",
+    "@octokit/request": "^9.1.3",
+    "@octokit/rest": "^21.0.1",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "decompress": "^4.2.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "postcss": "8.4.31",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
