--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "autoprefixer": "10.4.15",
     "es-shim-unscopables": "^1.0.2",
-    "eslint-config-next": "13.5.2",
-    "next": "13.5.2",
+    "eslint-config-next": "^14.2.5",
+    "next": "^14.2.5",
     "node-releases": "^2.0.13",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -23,7 +23,7 @@
     "react-virtualized-auto-sizer": "^1.0.20",
     "react18-json-view": "^0.2.7",
     "string-similarity": "^4.0.4",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
     "@octokit/auth-unauthenticated": "^6.1.0",
